<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context="com.example.administrator.sharedroute.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:paddingTop="170dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_center_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="start">

        <TextView
            android:id="@+id/user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserID"
            android:textSize="18sp"
            android:textColor="#FFEB3B" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="255dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/user_edit_text"
                android:shadowColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入学号"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserPassword"
            android:textSize="18sp"
            android:textColor="#FFEB3B"
            android:layout_marginTop="20dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="255dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pass_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="255dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/LoginButtonText"
        android:textColor="#b3000000"
        android:textSize="18sp"
        android:background="@drawable/shape"
        android:layout_marginTop="48dp"/>

        <TextView
            android:id="@+id/regi_text"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/RegisterButtonText"
            android:textColor="#b3ffffff"
            android:textSize="18sp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
