<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5"
    tools:context="com.example.administrator.sharedroute.activity.RegisterActivity">

    <include
        layout="@layout/back_layout"
        android:title="@string/title_register"
        android:elevation="4dp"/>
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/regiser_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TableLayout
                    android:background="@drawable/roundedcorner"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="姓名"
                            android:textSize="18sp"/>
                        <EditText
                            android:id="@+id/regi_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="学号"
                            android:textSize="18sp"/>
                        <EditText
                            android:id="@+id/regi_stu_num"
                            android:inputType="number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="手机"
                            android:textSize="18sp"/>
                        <EditText
                            android:id="@+id/regi_phone"
                            android:inputType="number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"/>
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:background="@drawable/roundedcorner"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="邀请码"
                        android:textSize="18sp"/>
                    <EditText
                        android:id="@+id/regi_invite_code"
                        android:inputType="number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"/>
                </LinearLayout>

                <TableLayout
                    android:background="@drawable/roundedcorner"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="密码"
                            android:textSize="18sp" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/regi_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:textSize="16sp"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>
                    </TableRow>
                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="请重复"
                            android:textSize="18sp" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/verify_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:textSize="16sp"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/regi_ensure_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape"
                    android:text="注             册"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
        </LinearLayout>
</ScrollView>

</LinearLayout>
